# stellaris-ai-translate

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  build.rs  main.py  pyproject.toml  task.template.toml
.claude/: settings.local.json
.github/workflows/: release.yml
data/glossary/: stellaris.json
docs/: about_datadir.md  about_glossary.md  workflow.md
src/: error.rs  lib.rs  main.rs
src/config/: client_settings.rs  env.rs  mod.rs  task.rs
src/postprocess/: cleanup.rs  merger.rs  mod.rs  writer.rs
src/preprocess/: mod.rs  normalizer.rs  splitter.rs  yaml_fixer.rs
src/translate/: batcher.rs  glossary.rs  mod.rs  splitter.rs  translator.rs  validator.rs
src/translate/api/: client.rs  mod.rs  models.rs
src/utils/: fs.rs  mod.rs  regex_patterns.rs  token_estimator.rs
tests/localisation/english/: l_english_test_fix.yml
