[package]
name = "paradox-mod-translator"
version = "0.1.0"
edition = "2024"
authors = ["Rosmeowtis <rosmeowtis@outlook.com>"]
description = "AI-powered translator for Paradox game mods"
license = "MIT"
repository = "https://github.com/Rosmeowtis/paradox-mod-translator"
build = "build.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
dotenvy = "0.15"
ftail = "0.3.1"
futures = "0.3.31"
log = "0.4"
regex = "1.10"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.148"
serde_yaml = "0.9"
thiserror = "2.0"
tokio = { version = "1.40", features = ["full"] }
toml = "0.9.8"
walkdir = "2.5"

[dev-dependencies]
assert_fs = "1.*"
tempfile = "3.*"

[build-dependencies]
walkdir = "2.5"
zip = "7.0.0"

[[bin]]
name = "pmt"
path = "src/main.rs"
